--- a/views/producto/addProducto.hbs
+++ b/views/producto/addProducto.hbs
@@ -1,17 +1,3 @@
-<style>
-    .table td, .table th {
-        vertical-align: middle;
-    }
-    h1,h2 {
-        color: blue;
-    }
-    hr {
-        background-color: #ddd;
-    }
-    .jumbotron {
-        min-height: 100vh;
-    }
-</style>
 <div class="jumbotron">
     <h2>Ingrese Producto</h2>
 
@@ -30,8 +16,10 @@
             <input class="form-control" type="text" name="thumbnail">
         </div> 
         
-        <button class="btn btn-success">Enviar</button>
+        <button class="btn btn-success" id="btnEnviar">Enviar</button>
     </form>
+    
+
 </div>
 
     
