--- a/views/info.hbs
+++ b/views/info.hbs
@@ -37,6 +37,21 @@
     <div class="card">
         <div class="card-header" id="headingThree">
             <h5 class="mb-0">
+                <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#cpus" aria-expanded="false"
+                    aria-controls="collapseThree">
+                    Cantidad de Procesadores
+                </button>
+            </h5>
+        </div>
+        <div id="cpus" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+            <div class="card-body">
+                {{info.CantCPU}}
+            </div>
+        </div>
+    </div>
+    <div class="card">
+        <div class="card-header" id="headingThree">
+            <h5 class="mb-0">
                 <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#nodeV" aria-expanded="false"
                     aria-controls="collapseThree">
                     Node Version
